# nanochat-dgx-spark

./: pyproject.toml
nanochat/: common.py  engine.py  flash_attention.py  fp4.py  gpt.py
scripts/: base_train.py  chat_sft.py
scripts/dgx-spark/: cluster.sh  env.sh  prepare.sh  pretrain.sh  test_run.sh
tests/: test_attention_fallback.py
